--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .hero{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.801)), url(../../assets/img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.801)), url(/assets/img/hero.jpg);
     width: 100%;
     height: 100vh;
     background-size: cover;
