--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,10 @@
     cursor: pointer;
     transform: scale(1.04);
 }
+#navbar {
+    transition: 0.3s ease;
+}
+
+#navbar.scrolled {
+    background-color: #0D6EFD;
+}
