--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .hero{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.801)), url(/assets/img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.801)), url(../assets/img/hero.jpg);
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -50,7 +50,12 @@
 html {
     scroll-padding-top: 130px;
 }
-
+.layanan img{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 130px;
+}
 }
 .fa-circle-check{
     color: green;
